# alfarobi_neo_ws

./: .gitignore  README.md  julian.txt
src/alfarobi_controller/: CMakeLists.txt  GlobalConfig.yaml  PyserialTest.py  arduino_controller.launch  arduino_controller_node.cpp  controller.cpp  controller.h  controller.py  package.xml  testSub.py
src/alfarobi_controller/arduino/Angle_Gyro_BNO055/: Angle_Gyro_BNO055.ino
src/alfarobi_controller/arduino/BNO055_Devantec/: BNO055.c  BNO055.cpp  BNO055.h
src/alfarobi_controller/arduino/alfarobi_arduimu_buzzer_button_v4/: alfarobi_arduimu_buzzer_button_v4.ino
src/alfarobi_controller/include/: controller.h
src/alfarobi_controller/script/: arduino_controller.py
src/alfarobi_controller/src/: arduino_controller_node.cpp  controller.cpp
src/alfarobi_dxlsdk/: CMakeLists.txt  package.xml
src/alfarobi_dxlsdk/include/alfarobi_dxlsdk/: joint_value.h  servo_controller.h
src/alfarobi_dxlsdk/include/dynamixel_sdk/: dynamixel_sdk.h
src/alfarobi_dxlsdk/src/: main.cpp
src/alfarobi_dxlsdk/src/alfarobi_dxlsdk/: servo_controller.cpp
src/alfarobi_dxlsdk/src/dynamixel_sdk/: group_bulk_read.cpp  group_bulk_write.cpp  group_sync_read.cpp  group_sync_write.cpp  packet_handler.cpp  port_handler.cpp  port_handler_linux.cpp  protocol1_packet_handler.cpp  protocol2_packet_handler.cpp
src/alfarobi_monitor/: package.xml  (+1 more)
src/alfarobi_vision/: CMakeLists.txt  package.xml  setup.py
src/alfarobi_vision/config/v10_goalpost_detector/: saved_config.yaml
src/alfarobi_vision/custom_pkg/: CMakeLists.txt
src/alfarobi_vision/img_source/LUT/: tabel_warna.xml
src/alfarobi_vision/img_source/config/: c920_calib_data.yaml  lifecam_cinema.yaml  lifecam_cinema_190619.yaml
src/alfarobi_vision/img_source/src/: img_source.cpp
src/alfarobi_vision/include/alfarobi_vision/: alfarobi_vision.h
src/alfarobi_vision/include/img_source/: img_source.h
src/alfarobi_vision/include/v10_goalpost_detector/: v10_goalpost_detector.h
src/alfarobi_vision/include/v9_ball_detector/: v9_ball_detector.h
src/alfarobi_vision/include/v9_localization/: v9_amcl.h  v9_localization.h
src/alfarobi_vision/include/vision_utils/: fitcircle.h  localization_utils.h
src/alfarobi_vision/launch/img_source/: img_source.launch
src/alfarobi_vision/launch/tflite_detector/: tflite_detector_node.launch
src/alfarobi_vision/launch/v10_goalpost_detector/: v10_goalpost_detector.launch  v10_goalpost_detector_from_video.launch
src/alfarobi_vision/launch/v9_ball_detector/: v9_ball_detector.launch  v9_ball_detector_from_video.launch  v9_ball_detector_gazebo.launch  v9_ball_detector_goalpost.launch
src/alfarobi_vision/launch/v9_localization/: v9_localization.launch  v9_localization_from_video.launch
src/alfarobi_vision/launch/yolov5_detector/: yolov5_detector_node.launch
src/alfarobi_vision/localization_monitor/launch/: localization_monitor.launch
src/alfarobi_vision/localization_monitor/src/: dataviewer.cpp  main.cpp
src/alfarobi_vision/python_img_sub/: package.xml
src/alfarobi_vision/python_img_sub/src/: yolo.py
src/alfarobi_vision/src/alfarobi_vision/: alfarobi_vision_node.cpp
src/alfarobi_vision/src/custom_pkg/: package.xml  setup.py
src/alfarobi_vision/src/img_source/: CMakeLists.txt  img_source.cpp  img_source_node.cpp  package.xml
src/alfarobi_vision/src/localization_monitor/: CMakeLists.txt  package.xml
src/alfarobi_vision/src/python_img_sub/: CMakeLists.txt  setup.py
src/alfarobi_vision/src/tflite_detector/: listener.py  tensorflowDetection.py  tflite_detector_node.py
src/alfarobi_vision/src/v10_goalpost_detector/: CMakeLists.txt  package.xml  v10_goalpost_detector.cpp  v10_goalpost_detector_node.cpp
src/alfarobi_vision/src/v9_ball_detector/: CMakeLists.txt  package.xml  v9_ball_detector.cpp
src/alfarobi_vision/src/v9_localization/: v9_localization.cpp  v9_localization_node.cpp
src/alfarobi_vision/src/vision_monitor/: CMakeLists.txt  package.xml
src/alfarobi_vision/src/vision_utils/: localization_utils.cpp  package.xml
src/alfarobi_vision/src/yolov5_detector/: yolov5_detector_node.py
src/alfarobi_vision/usb_cam/src/: usb_cam.cpp
src/alfarobi_vision/v10_goalpost_detector/cfg/: GoalpostDetectorParams.cfg
src/alfarobi_vision/v10_goalpost_detector/launch/: v10_goalpost_detector.launch  v10_goalpost_detector_from_video.launch
src/alfarobi_vision/v9_ball_detector/launch/: v9_ball_detector.launch  v9_ball_detector_from_video.launch  v9_ball_detector_gazebo.launch  v9_ball_detector_goalpost.launch
src/alfarobi_vision/v9_ball_detector/src/: v9_ball_detector.cpp
src/alfarobi_vision/v9_localization/: CMakeLists.txt
src/alfarobi_vision/v9_localization/config/: saved_params.yaml
src/alfarobi_vision/v9_localization/launch/: v9_localization_from_video.launch
src/alfarobi_vision/v9_localization/src/: v9_amcl.cpp  v9_localization.cpp
src/alfarobi_vision/vision_monitor/launch/: vision_monitor.launch  vision_monitor_from_video.launch
src/alfarobi_vision/vision_monitor/src/: frameprocess.cpp.autosave  main.cpp  mainwindow.cpp
src/alfarobi_vision/vision_utils/: CMakeLists.txt
src/alfarobi_vision/vision_utils/msg/: Features.msg  FieldBoundary.msg~HEAD  MonitorUtils.msg~HEAD
src/alfarobi_vision/vision_utils/src/: fitcircle.cpp  fitcircle.cpp~HEAD  localization_utils.cpp
src/alfarobi_vision/weight/: best_10april.onnx  edgetpu.tflite  labelmap.txt
src/model_based_control/: CMakeLists.txt  package.xml
src/model_based_control/config/: config.yaml  densisParam.yaml  modelBasedControl.yaml  reportcard.csv
src/model_based_control/config/dlqr/: Q.csv
src/model_based_control/config/kalman/: R.csv
src/model_based_control/launch/: model_based_control.launch
src/model_based_control/src/: csvManager.cpp  densis.cpp  modelBasedControl.cpp  model_based_control_node(mastahLintang).cpp  model_based_control_node.cpp  servoObserver.cpp
src/op3_kinematics_dynamics/: CMakeLists.txt  package.xml
src/op3_kinematics_dynamics/config/: physicalParam.yaml
src/op3_kinematics_dynamics/src/: link_data.cpp  op3_kinematics_dynamics.cpp  servoObserver.cpp
(+228 files in other folders)
