<?xml version="1.0"?>
<package format="2">
  <name>model_based_control</name>
  <version>0.0.0</version>
  <description>The model_based_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bagaskarapp@todo.todo">bagaskarapp</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>filter_msgs</build_depend> -->
  <build_depend>eigen_conversions</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>filter_msgs</exec_depend> -->
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
